--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     
     <main>
-    <section>
+    <section id="flex-container">
         <div id="a">A</div>
         <div id="b">B</div>
         <div id="c">C</div>
